<resources>
    <string name="app_name">WeFine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_description">Begin your journey to better mental health \nwith Mental Health App.</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="back">Back</string>
    <string name="welcome_desc">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="email_value">john.doe@gmail.com</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email">Enter your email to reset your password</string>
    <string name="send">Send</string>
    <string name="set_new_password">Set your new password</string>
    <string name="enter_verification_code">Enter the verification code and create a new password</string>
    <string name="verification_code">Verification code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm your new Password</string>
    <string name="resend_code">Resend Code?</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_desc">Your password has been updated</string>
    <string name="submit">Submit</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="username_value">John_Doe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="name_value">John Doe</string>
    <string name="bio">Bio</string>
    <string name="bio_value">Available</string>
    <string name="gender">Gender</string>
    <string name="gender_value">Male</string>
    <string name="edit_picture">Edit picture</string>
    <string-array name="arrGender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="greeting_john">Hello, John</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="home">Home</string>
    <string name="forum">Forum</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="consultation">Consultation</string>
    <string name="history">History</string>
    <string name="other">Other</string>
    <string name="article">Article</string>
    <string name="title">Title</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus varius, turpis in vestibulum vestibulum, odio urna volutpat leo, nec tincidunt sapien justo nec justo. Nulla facilisi. Quisque et facilisis dolor.</string>
    <string name="nothing_here">Nothing here</string>
    <string name="create_your_account">Create your account</string>
    <string name="please_enter_your_credentials">Please enter your credentials</string>
    <string name="i_accept_the_terms_of_agreement">I accept the terms of agreement</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="konsultasi_sudah_selesai">Konsultasi sudah selesai!</string>
    <string name="semoga_konsultasi_tadi_ndapat_membantu">Semoga konsultasi tadi\ndapat membantu ☺</string>
    <string name="invoice">Invoice</string>
    <string name="result">Result</string>
    <string name="lanjut_ke_halaman">Lanjut ke halaman:</string>
    <string name="hallo_jhon_nkami_siap_membantumu">Hallo, Jhon!\nKami siap membantumu ☺</string>
    <string name="apa_yang_kamu_butuhkan">Apa yang kamu butuhkan?</string>
    <string name="psikolog">Psikolog</string>
    <string name="psikiater">Psikiater</string>
    <string name="notifications">Notifications</string>
    <string name="clear_all">Clear all</string>
    <string name="notification_header">Notification Header</string>
    <string name="description_of_notification">Description of notification</string>
    <string name="notification_time">2 hours ago</string>
    <string name="yoga">Yoga</string>
    <string name="meditate">Meditate</string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="role">Role</string>
    <string name="rating_value">4.5</string>
    <string name="available">Available</string>
    <string name="patient_value">120</string>
    <string name="experience_value">8</string>
    <string name="price">Price</string>
    <string name="price_value">Rp. 120.000,00</string>
    <string name="biography">Biography</string>
    <string name="consult_now">Consult Now</string>
    <string name="consult_later">Consult Later</string>
    <string name="logo">Logo</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_profile">My profile</string>
    <string name="dark_mode">Dark mode</string>
    <string name="push_notifications">Push notifications</string>
    <string name="block_sensitive_content">Block sensitive content</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="language">Language</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="logout">Logout</string>
</resources>