<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignInFragment">

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.MentalHealthApp.Button.IconButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:backgroundTint="@color/primary_50"
        android:contentDescription="@string/back"
        app:icon="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_back"
        android:textColor="@color/neutral_90"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toStartOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <TextView
        android:id="@+id/tvWelcomeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/welcome_desc"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etEmail"
        android:text="@string/email"
        android:textSize="18sp"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeDesc"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="18dp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/etPassword"
        android:text="@string/password"
        android:textSize="18sp"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="18dp" />

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:buttonTint="@color/neutral_50"
        android:text="@string/remember_me"
        android:textColor="@color/neutral_90"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/secondary_50"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/primary_50"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="@font/inter_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.80"
        tools:ignore="TextContrastCheck,VisualLintButtonSize"
        tools:layout_editor_absoluteX="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        tools:layout_editor_absoluteX="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/dont_have_an_account"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/secondary_50"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>