<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:fontFamily="@font/inter_semibold"
        app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
        app:layout_constraintTop_toTopOf="@id/ivProfilePicture" />

    <TextView
        android:id="@+id/tvRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/role"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:drawablePadding="4dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/rating_value"
        app:drawableEndCompat="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@id/ivProfilePicture"
        app:layout_constraintStart_toStartOf="@id/tvName" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="8dp"
        android:text="@string/available"
        android:textAlignment="textEnd"
        android:textColor="@color/success"
        app:drawableLeftCompat="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@id/tvRating"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>