<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignUpFragment">

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.MentalHealthApp.Button.IconButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:backgroundTint="@color/primary_50"
        android:contentDescription="@string/back"
        app:icon="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/neutral_90"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintStart_toStartOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <TextView
        android:id="@+id/tvEmailReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/enter_your_email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvForgotPassword"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/etEmail"
        android:text="@string/email"
        android:textSize="18sp"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvEmailReset"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailReset"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="18dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/primary_50"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="@font/inter_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.075"
        tools:ignore="TextContrastCheck,VisualLintButtonSize"
        tools:layout_editor_absoluteX="19dp" />

</androidx.constraintlayout.widget.ConstraintLayout>